Moved some logic from web to service layer. Created tests for controllers: BudgetItem and Currency.